Item de Consorcio

--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -11,6 +11,7 @@
 <script src="../../js/jquery-ui.min.js"></script>
 <script src="../../bootstrap/js/bootstrap.min.js"></script>
 <script src="../../js/segurado/segurado-script.js"></script>
+<script src="../../js/item/item-seguro-script.js"></script>
 <script src="../../js/jquery-mask.js"></script>
 
 
