Item seguro Equipamento

--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -40,6 +40,7 @@
                   <li><a href="#" th:href="@{/item/cadastro-seguroAluguel}"> <i class="glyphicon glyphicon-list-alt" aria-hidden="true"></i> &nbsp;Seguro de Aluguel </a></li>
                   <li><a href="#" th:href="@{/item/cadastro-seguroPrevidencia}"> <i class="glyphicon glyphicon-list-alt" aria-hidden="true"></i> &nbsp;Seguro de Previdência </a></li>
                   <li><a href="#" th:href="@{/item/cadastro-seguroConsorcio}"> <i class="glyphicon glyphicon-list-alt" aria-hidden="true"></i> &nbsp;Seguro de Consórcio </a></li>
+                  <li><a href="#" th:href="@{/item/cadastro-seguroEquipamento}"> <i class="glyphicon glyphicon-list-alt" aria-hidden="true"></i> &nbsp;Seguro de Equipamento </a></li>
                 </ul>
 			</li>
 		</ul>
