Item de Seguro de Condominio

--- a/src/main/resources/templates/item/cadastro-seguroCondominio.html
+++ b/src/main/resources/templates/item/cadastro-seguroCondominio.html
@@ -12,10 +12,10 @@
 	<div class="container" id="content" tabindex="-1">
 		<div class="borda-div">
 		<fieldset class="scheduler-border">
-		<legend class="scheduler-border">Cadastro do Seguro Residencial</legend>
+		<legend class="scheduler-border">Cadastro do Seguro Condominio</legend>
 		<br/>
 		
-		<form action="#" th:action="@{/item/gravar-seguroResidencial}" th:object="${itemSeguroResidencial}" method="post">
+		<form action="#" th:action="@{/item/gravar-seguroCondominio}" th:object="${itemSeguroCondominio}" method="post">
 		
 			<div th:replace="comum/endereco"></div>
 		
