Item de Seguro Odontologico

--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -42,6 +42,7 @@
                   <li><a href="#" th:href="@{/item/cadastro-seguroConsorcio}"> <i class="glyphicon glyphicon-list-alt" aria-hidden="true"></i> &nbsp;Seguro de Consórcio </a></li>
                   <li><a href="#" th:href="@{/item/cadastro-seguroEquipamento}"> <i class="glyphicon glyphicon-list-alt" aria-hidden="true"></i> &nbsp;Seguro de Equipamento </a></li>
                   <li><a href="#" th:href="@{/item/cadastro-seguroCondominio}"> <i class="glyphicon glyphicon-list-alt" aria-hidden="true"></i> &nbsp;Seguro de Condomínio </a></li>
+                  <li><a href="#" th:href="@{/item/cadastro-seguroOdontologico}"> <i class="glyphicon glyphicon-list-alt" aria-hidden="true"></i> &nbsp;Seguro de Odontologico </a></li>
                 </ul>
 			</li>
 		</ul>
