Item de Financiamento

--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -43,6 +43,8 @@
                   <li><a href="#" th:href="@{/item/cadastro-seguroEquipamento}"> <i class="glyphicon glyphicon-list-alt" aria-hidden="true"></i> &nbsp;Seguro de Equipamento </a></li>
                   <li><a href="#" th:href="@{/item/cadastro-seguroCondominio}"> <i class="glyphicon glyphicon-list-alt" aria-hidden="true"></i> &nbsp;Seguro de Condomínio </a></li>
                   <li><a href="#" th:href="@{/item/cadastro-seguroOdontologico}"> <i class="glyphicon glyphicon-list-alt" aria-hidden="true"></i> &nbsp;Seguro de Odontologico </a></li>
+                  <li><a href="#" th:href="@{/item/cadastro-seguroFinanciamento}"> <i class="glyphicon glyphicon-list-alt" aria-hidden="true"></i> &nbsp;Seguro de Financiamento </a></li>
+                  <li><a href="#" th:href="@{/item/cadastro-seguroRastreador}"> <i class="glyphicon glyphicon-list-alt" aria-hidden="true"></i> &nbsp;Seguro de Rastreador </a></li>
                 </ul>
 			</li>
 		</ul>
