--- a/src/main/resources/templates/item/cadastro-seguroPrevidencia.html
+++ b/src/main/resources/templates/item/cadastro-seguroPrevidencia.html
@@ -25,8 +25,8 @@
 						<label for="" class="control-label">Tipo</label>
 						<select class="form-control" th:field="*{tipo}">
 							<option value="0">Selecione</option>
-							<option value="Imóvel">Imóvel</option>
-							<option value="Automóvel">Automóvel</option>
+							<option value="Infantil">Infantil</option>
+							<option value="Individual">Individual</option>
 						</select>
 					</div>
 				</div>
