--- a/src/main/resources/templates/item/cadastro-seguroFinanciamento.html
+++ b/src/main/resources/templates/item/cadastro-seguroFinanciamento.html
@@ -8,7 +8,9 @@
 <body>
 	
 	<div th:replace="header"></div>
-	
+	<div class="icon">
+		<i class="fa fa-money fa-5x" aria-hidden="true" style="color:white"></i>
+	</div>	
 	<div class="container" id="content" tabindex="-1">
 		<div class="borda-div">
 		<fieldset class="scheduler-border">
