--- a/src/main/resources/templates/item/cadastro-seguroOdontologico.html
+++ b/src/main/resources/templates/item/cadastro-seguroOdontologico.html
@@ -8,7 +8,9 @@
 <body>
 	
 	<div th:replace="header"></div>
-	
+	<div class="icon">
+		<img src="../../img/icone/molar-grande.png" alt="" />
+	</div>
 	<div class="container" id="content" tabindex="-1">
 		<div class="borda-div">
 		<fieldset class="scheduler-border">
