--- a/src/main/resources/templates/segurado/consulta-segurado.html
+++ b/src/main/resources/templates/segurado/consulta-segurado.html
@@ -51,12 +51,8 @@
 	<div th:if="${listaSegurados ne null and not listaSegurados.empty}">
 		<br />
 		<br />
-		<br />
-	<legend class="scheduler-border">Segurados</legend>
-	<br />
-	<br />
 	<table class="table table-hover" id="tab-segurado" >
-
+	<caption>Segurados</caption>
 		<tr>
 			<th>Nome</th>
 			<th>Cpf</th>
