--- a/src/main/resources/templates/segurado/detalhe-segurado.html
+++ b/src/main/resources/templates/segurado/detalhe-segurado.html
@@ -116,12 +116,10 @@
 					</div>
 				</form>
 				<div th:if="${!listaItemSeguro.empty}">
-					 <br /> <br />
-					<legend class="scheduler-border">Seguros</legend>
 					 <br />
 				
 					<table class="table table-hover" id="tab-segurado">
-
+					<caption>Seguros</caption>
 						<tr>
 							<th>Tipo de Seguro</th>
 							<th>Seguradora</th>
