--- a/src/main/resources/static/css/estilo.css
+++ b/src/main/resources/static/css/estilo.css
@@ -2,44 +2,53 @@
 .centralizar{
     text-align: center;
 }
-.navbar-default {
-    background-color: #39436D;
-}
 
 .navbar-default .navbar-nav>li>a {
     color: #FFF;
 }
 
 body{
-	background-color: #F1F1F1;
+	background-color: #5F6789;
+	padding-top: 70px;
 }
 
-.borda-div{
-	border: 1px solid #CCC;
-	border-radius:10px;
-	padding:20px;
-}
 
-<<<<<<< HEAD
 hr{
 	border: 1px solid #E7E7E7;
-=======
+}
+
 .navbar-default {
     background-color: #39436D;
     border-color: #e7e7e7;
-}
-
-.navbar-default .navbar-nav>li>a {
-    color: #FFF;
-}
-
-body{
-    background-color: #F1F1F1;
 }
 
 .borda-div{
 	border:1px solid #CCC;
 	padding: 40px;
 	border-radius:10px;
->>>>>>> ac2db2c3a34c929438d00582025279a86f359812
+	background-color: #F1F1F1;
+	margin-left: 25px;
+}
+
+
+legend{
+	text-transform: uppercase;
+	color: #5CB85C;
+}
+.icon{
+	margin-left: 10px;
+	float: left;
+}
+
+footer{
+	margin-bottom: 15px;
+}
+
+
+.navbar-default .navbar-nav>li>a:hover{
+	color:  #5F6789;
+}
+
+.navbar-default .navbar-nav>li>a:focus, .navbar-default .navbar-nav>li>a:hover {
+	color:  #5F6789
 }
