--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -4,31 +4,32 @@
 <footer class="section section-primary">
 	<div class="container">
 		<div class="row">
-			<div class="col-sm-12" style="text-align: center;color:#CCC">
+			<div class="col-md-12" style="text-align: center;color:#CCC">
 				<h2>SISTEMA GERENCIADOR DE SEGUROS</h2>
 				<p>copyright © corretora de seguros 2017</p>
 			</div>
-			<div class="col-sm-6">
-				<p class="text-info text-right">
-					<br />
+			
+			<br />
+			<br />
+			<br />
+			<br />
+			<br />
+			<br />
+			<br />
+			<br />
+			<div class="col-md-12">
+				<p class="text-right" style="color:white;margin-right: 180px">
+					Contatos:
 					<br />
 				</p>
+				
 				<div class="row">
-					<div class="col-md-12 hidden-lg hidden-md hidden-sm text-left">
+					<div class="col-md-12 text-right">
 						<a href="#"><i
-							class="fa fa-3x fa-fw fa-instagram text-inverse"></i></a> <a href="#"><i
-							class="fa fa-3x fa-fw fa-twitter text-inverse"></i></a> <a href="#"><i
-							class="fa fa-3x fa-fw fa-facebook text-inverse"></i></a> <a href="#"><i
-							class="fa fa-3x fa-fw fa-github text-inverse"></i></a>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-12 hidden-xs text-right">
-						<a href="#"><i
-							class="fa fa-3x fa-fw fa-instagram text-inverse"></i></a> <a href="#"><i
-							class="fa fa-3x fa-fw fa-twitter text-inverse"></i></a> <a href="#"><i
-							class="fa fa-3x fa-fw fa-facebook text-inverse"></i></a> <a href="#"><i
-							class="fa fa-3x fa-fw fa-github text-inverse"></i></a>
+							class="fa fa-3x fa-fw fa-instagram text-inverse" style="color: white"></i></a> <a href="#"><i
+							class="fa fa-3x fa-fw fa-twitter text-inverse" style="color: white"></i></a> <a href="#"><i
+							class="fa fa-3x fa-fw fa-facebook text-inverse" style="color: white"></i></a> <a href="#">
+							</a>
 					</div>
 				</div>
 			</div>
