--- a/src/main/resources/templates/home/home.html
+++ b/src/main/resources/templates/home/home.html
@@ -11,8 +11,8 @@
 
 	<div class="container" id="content" tabindex="-1" >
 		<div class="row">
-			<div class="col-md-2"></div>
-			<div class="col-md-8 borda-div"  style="background-color: white">
+			
+			<div class="col-md-12 borda-div"  style="background-color: white">
 			<div class="centralizar">
 				<h1>Seja Bem vindo ao Sistema de Seguros</h1>
 				<br/>
@@ -56,7 +56,12 @@
 				  </a>
 				</div>
 			</div>
-			<div class="col-md-2"></div>
+			<script>
+			$('.carousel').carousel({
+				  pause: "hover";
+			  	  interval:2000;
+			})
+			</script>
 		</div>
 	</div>
 	
