--- a/src/main/resources/templates/item/cadastro-seguroEquipamento.html
+++ b/src/main/resources/templates/item/cadastro-seguroEquipamento.html
@@ -8,11 +8,13 @@
 <body>
 	
 	<div th:replace="header"></div>
-	
+	<div class="icon">
+		<i class="fa fa-cogs fa-5x" aria-hidden="true" style="color:white"></i>
+	</div>
 	<div class="container" id="content" tabindex="-1">
 		<div class="borda-div">
 		<fieldset class="scheduler-border">
-		<legend class="scheduler-border">Cadastro do Seguro Vida</legend>
+		<legend class="scheduler-border">Cadastro de Seguro Equipamentos</legend>
 		<br/>
 		
 		<form action="#" th:action="@{/item/gravar-seguroEquipamento}" th:object="${itemSeguroEquipamento}" method="post">
