--- a/src/main/resources/templates/item/cadastro-seguroResidencial.html
+++ b/src/main/resources/templates/item/cadastro-seguroResidencial.html
@@ -2,12 +2,15 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8" />
-<title>Cadastro de Seguro Condominio</title>
+<title>Cadastro de Residencial</title>
 
 </head>
 <body>
 	
 	<div th:replace="header"></div>
+	<div class="icon">
+		<i class="fa fa-home fa-5x" aria-hidden="true" style="color:white"></i>
+	</div>
 	
 	<div class="container" id="content" tabindex="-1">
 		<div class="borda-div">
