--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -5,6 +5,7 @@
 <title>Cadastro de Segurado</title>
 <link href="../../bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 <link href="../../css/estilo.css" rel="stylesheet" />
+<link href="../../css/typeaheadjs.css" rel="stylesheet" />
 <link rel="stylesheet" href="../../font-awesome/css/font-awesome.css"/>
 <link rel="stylesheet prefetch" href="http://fonts.googleapis.com/css?family=Open+Sans:600"/>
 
@@ -14,6 +15,7 @@
 <script src="../../js/segurado/segurado-script.js"></script>
 <script src="../../js/item/item-seguro-script.js"></script>
 <script src="../../js/jquery-mask.js"></script>
+<script src="../../js/item/typeahead.jquery.js"></script>
 
 </head>
 <body>
