--- a/src/main/resources/templates/item/cadastro-seguroAluguel.html
+++ b/src/main/resources/templates/item/cadastro-seguroAluguel.html
@@ -6,7 +6,7 @@
 
 </head>
 <body>
-	
+	<input th:hidden="segurado"/>
 	<div th:replace="header"></div>
 	<div class="icon">
 		<i class="fa fa-bed fa-5x" aria-hidden="true" style="color:white"></i>
@@ -17,9 +17,12 @@
 		<legend class="scheduler-border">Cadastro do Seguro de Aluguel</legend>
 		<br/>
 		
-		<form action="#" th:action="@{/item/gravar-seguroAluguel}" th:object="${itemSeguroAluguel}" method="post">
 		
-			<div th:replace="comum/endereco"></div>
+		
+		<form action="#" th:action="@{/item/gravar-seguroAluguel}" th:object="${itemSeguroAluguel}" method="post">
+			
+			
+		    <div th:replace="comum/endereco"></div>
 			<br/>
 		
 				<div th:replace="item/item-seguro"></div>
@@ -34,8 +37,6 @@
 			</div>
 			
 			
-			<br/>
-			
 			<div class="centralizar">
 					<button type="submit" class="btn btn-success">Cadastrar</button>
 			</div>
@@ -45,5 +46,58 @@
 		</div>
 	</div>
 	<div th:replace="footer"></div>
+	<script th:inline="javascript">
+	/*<![CDATA[*/	
+  var seguradoData = [];
+
+  var seguradosList = [[${listaSegurado}]]
+  for (i = 0; i < seguradosList.length; i++) {
+	  seguradoData.push(seguradosList[i]);
+  }
+
+  
+
+  /*]]>*/
+  
+var substringMatcher = function (strings) {
+    return function findMatches(query, callback) {
+        var matches;
+
+        // an array that will be populated with substring matches
+        matches = [];
+
+        // regex used to determine if a string contains the substring `q`
+        substrRegex = new RegExp(query, 'i');
+
+        // iterate through the pool of strings and for any string that
+        // contains the substring `q`, add it to the `matches` array
+        $.each(strings, function (i, str) {
+            if (substrRegex.test(str)) {
+                matches.push(str);
+            }
+        });
+
+        callback(matches);
+    };
+};
+
+
+var options = {};
+var dataSet = {
+    source: substringMatcher(seguradoData)
+};
+
+$('.typeahead').typeahead(options, dataSet);
+
+$('button.remove').click(
+    function () {
+        $('.typeahead').typeahead('val', '').trigger('typeahead:idle');
+    }
+);
+
+
+  
+</script>
+	
 </body>
 </html>
