--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -17,6 +17,15 @@
 <script src="../../js/jquery-mask.js"></script>
 <script src="../../js/item/typeahead.jquery.js"></script>
 
+<style type="text/css">
+.espacoHorizontal>li>a{
+	line-height: 1.8 !important;
+}
+
+
+</style>
+
+
 </head>
 <body>
 
@@ -25,15 +34,15 @@
 		<ul class="nav navbar-nav">
 			<li class="dropdown">
 				<a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="glyphicon glyphicon-user" aria-hidden="true"></i> &nbsp;Segurado <b class="caret"></b></a>
-				<ul class="dropdown-menu">
+				<ul class="dropdown-menu espacoHorizontal">
                   <li><a href="#" th:href="@{/segurado/cadastro-segurado}"><i class="glyphicon glyphicon-list-alt" aria-hidden="true"></i> &nbsp;Cadastro do Segurado</a></li>
                   <li><a href="#" th:href="@{/segurado/consulta-segurado}"><i class="glyphicon glyphicon-search" aria-hidden="true"></i> &nbsp;Consultar Segurado</a></li>
                 </ul>
 			</li>
 
-			<li class="dropdown">
+			<li class="dropdown" >
 				<a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="glyphicon glyphicon-folder-open" aria-hidden="true"></i> &nbsp;Item Seguro <b class="caret"></b></a>
-				<ul class="dropdown-menu">
+				<ul class="dropdown-menu espacoHorizontal">
                   <li><a href="#" th:href="@{/item/cadastro-seguroAutomovel}"> <i class="fa fa-car" aria-hidden="true"></i> &nbsp;Seguro de Automóvel </a></li>
                   <li><a href="#" th:href="@{/item/cadastro-seguroResidencial}"> <i class="fa fa-home" aria-hidden="true"></i> &nbsp;Seguro de Residência </a></li>
                   <li><a href="#" th:href="@{/item/cadastro-seguroEmpresarial}"> <i class="fa fa-industry" aria-hidden="true"></i> &nbsp;Seguro Empresarial </a></li>
