--- a/src/main/resources/templates/home/home.html
+++ b/src/main/resources/templates/home/home.html
@@ -13,24 +13,24 @@
 		<div class="row">
 			
 			<div class="col-md-12 borda-div"  style="background-color: white">
-			<div class="centralizar">
-				<h1>Seja Bem vindo ao Sistema de Seguros</h1>
-				<br/>
-			</div>
 				<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
 				  <!-- Indicators -->
 				  <ol class="carousel-indicators">
 				    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
 				    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+				    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+				    <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+				    <li data-target="#carousel-example-generic" data-slide-to="4"></li>
+				    <li data-target="#carousel-example-generic" data-slide-to="5"></li>
 				  </ol>
 				
 				  <!-- Wrapper for slides -->
 				  <div class="carousel-inner" role="listbox">
 				    <div class="item active">
 				      <div>
-				      	 <img src="../../../img/banner1.png" alt="..." style="height:370px;"/>
+				      	 <img src="../../../img/banner1.jpg" alt="..." style="height:580px;width:100%"/>
 					      <div class="carousel-caption">
-					        <h3>Seguros de Carros e Casas</h3>
+					        <h3>BEM-VINDO AO SISTEMA GERENCIADOR DE SEGUROS</h3>
 					        <p></p>
 					      </div>
 				      
@@ -38,9 +38,28 @@
 				      </div>
 				    </div>
 				    <div class="item">
-				      <img src="../../../img/banner2.jpg" alt="..." style="height:370px;width:750px"/>
+				      <img src="../../../img/banner2.jpg" alt="..." style="height:580px;width:100%"/>
 				      <div class="carousel-caption">
-						<h3>Seguros de Vida</h3>
+				      </div>
+				    </div>
+				    <div class="item">
+				      <img src="../../../img/banner3.jpg" alt="..." style="height:580px;width:100%"/>
+				      <div class="carousel-caption">
+				      </div>
+				    </div>
+				    <div class="item">
+				      <img src="../../../img/banner4.jpg" alt="..." style="height:580px;width:100%"/>
+				      <div class="carousel-caption">
+				      </div>
+				    </div>
+				    <div class="item">
+				      <img src="../../../img/banner5.jpg" alt="..." style="height:580px;width:100%"/>
+				      <div class="carousel-caption">
+				      </div>
+				    </div>
+				    <div class="item">
+				      <img src="../../../img/banner6.jpg" alt="..." style="height:580px;width:100%"/>
+				      <div class="carousel-caption">
 				      </div>
 				    </div>
 				  </div>
