--- a/src/main/resources/templates/item/cadastro-seguroVida.html
+++ b/src/main/resources/templates/item/cadastro-seguroVida.html
@@ -18,6 +18,24 @@
 		<br/>
 		
 		<form action="#" th:action="@{/item/gravar-seguroVida}" th:object="${itemSeguroVida}" method="post">
+			<div class="row">
+			<div class="col-md-5">
+				<div class="form-group">
+
+					 <div class="input-group">
+					 	<input class="form-control typeahead" name="query" id="query" placeholder="Digite um nome ou cpf" type="text" />
+					 	<span class="input-group-btn">
+					 		<a href="#" th:href="'javascript:selecionarSegurado(\''+ vida +'\')'" class="btn btn-success"  data-toggle="tooltip" data-loading-text="carregando .." title="Seleciona um Segurado">
+					 			<i class="glyphicon glyphicon-user" aria-hidden="true"></i>
+					 		</a>
+					 	</span>
+					</div>
+					<p class="help-block " ><ins>Encontre o segurado para vincular ao seguro.</ins></p>
+				</div>				
+			</div>
+			</div>
+			
+			<br/>
 			<h5 class="text-info">INFORMAÇÕES SEGURO DE VIDA</h5>
 			<br/>
 			<div class="row">
@@ -58,5 +76,6 @@
 		</div>
 	</div>
 	<div th:replace="footer"></div>
+	
 </body>
 </html>
