--- a/src/main/resources/templates/item/cadastro-seguroCondominio.html
+++ b/src/main/resources/templates/item/cadastro-seguroCondominio.html
@@ -19,6 +19,24 @@
 		
 		<form action="#" th:action="@{/item/gravar-seguroCondominio}" th:object="${itemSeguroCondominio}" method="post">
 		
+			<div class="row">
+			<div class="col-md-5">
+				<div class="form-group">
+
+					 <div class="input-group">
+					 	<input class="form-control typeahead" name="query" id="query" placeholder="Digite um nome ou cpf" type="text" />
+					 	<span class="input-group-btn">
+					 		<a href="#" th:href="'javascript:selecionarSegurado(\''+ condominio +'\')'" class="btn btn-success"  data-toggle="tooltip" data-loading-text="carregando .." title="Seleciona um Segurado">
+					 			<i class="glyphicon glyphicon-user" aria-hidden="true"></i>
+					 		</a>
+					 	</span>
+					</div>
+					<p class="help-block " ><ins>Encontre o segurado para vincular ao seguro.</ins></p>
+				</div>				
+			</div>
+			</div>
+		
+			<br/>
 			<div th:replace="comum/endereco"></div>
 		
 			<br/>
@@ -49,5 +67,8 @@
 		</div>
 	</div>
 	<div th:replace="footer"></div>
+	
+	
+	
 </body>
 </html>
