--- a/src/main/resources/templates/item/cadastro-seguroConsorcio.html
+++ b/src/main/resources/templates/item/cadastro-seguroConsorcio.html
@@ -25,8 +25,26 @@
 					looking too good.
 				</div>
 
-				<form action="#" th:action="@{/item/gravar-seguroConsorcio}" th:object="${itemSeguroConsorcio}" method="post">
+		<form action="#" th:action="@{/item/gravar-seguroConsorcio}" th:object="${itemSeguroConsorcio}" method="post">
+			<div class="row">
+			<div class="col-md-5">
+				<div class="form-group">
+
+					 <div class="input-group">
+					 	<input class="form-control typeahead" name="query" id="query" placeholder="Digite um nome ou cpf" type="text" />
+					 	<span class="input-group-btn">
+					 		<a href="#" th:href="'javascript:selecionarSegurado(\''+ consorcio +'\')'" class="btn btn-success"  data-toggle="tooltip" data-loading-text="carregando .." title="Seleciona um Segurado">
+					 			<i class="glyphicon glyphicon-user" aria-hidden="true"></i>
+					 		</a>
+					 	</span>
+					</div>
+					<p class="help-block " ><ins>Encontre o segurado para vincular ao seguro.</ins></p>
+				</div>				
+			</div>
+			</div>
 		
+		
+			<br/>
 			<div class="row">
 				<div class="col-md-4">
 					<div class="form-group">
@@ -62,5 +80,9 @@
 		</div>
 	</div>
 	<div th:replace="footer"></div>
+	
+	
+	
+	
 </body>
 </html>
