--- a/src/main/resources/templates/item/cadastro-seguroFinanciamento.html
+++ b/src/main/resources/templates/item/cadastro-seguroFinanciamento.html
@@ -20,6 +20,25 @@
 			<form action="#" th:action="@{/item/gravar-seguroFinanciamento}" th:object="${itemSeguroFinanciamento}" method="post">
 		
 			<div class="row">
+			<div class="col-md-5">
+				<div class="form-group">
+
+					 <div class="input-group">
+					 	<input class="form-control typeahead" name="query" id="query" placeholder="Digite um nome ou cpf" type="text" />
+					 	<span class="input-group-btn">
+					 		<a href="#" th:href="'javascript:selecionarSegurado(\''+ financiamento +'\')'" class="btn btn-success"  data-toggle="tooltip" data-loading-text="carregando .." title="Seleciona um Segurado">
+					 			<i class="glyphicon glyphicon-user" aria-hidden="true"></i>
+					 		</a>
+					 	</span>
+					</div>
+					<p class="help-block " ><ins>Encontre o segurado para vincular ao seguro.</ins></p>
+				</div>				
+			</div>
+			</div>
+			
+			
+			<br/>
+			<div class="row">
 				<div class="col-md-4">
 					<div class="form-group">
 						<label for="" class="control-label">Tipo</label>
@@ -54,5 +73,7 @@
 		</div>
 	</div>
 	<div th:replace="footer"></div>
+	
+	
 </body>
 </html>
