--- a/src/main/resources/templates/item/cadastro-seguroOdontologico.html
+++ b/src/main/resources/templates/item/cadastro-seguroOdontologico.html
@@ -18,8 +18,27 @@
 		<br/>
 		
 		<form action="#" th:action="@{/item/gravar-seguroOdontologico}" th:object="${itemSeguroOdontologico}" method="post">
+			<div class="row">
+			<div class="col-md-5">
+				<div class="form-group">
+
+					 <div class="input-group">
+					 	<input class="form-control typeahead" name="query" id="query" placeholder="Digite um nome ou cpf" type="text" />
+					 	<span class="input-group-btn">
+					 		<a href="#" th:href="'javascript:selecionarSegurado(\''+ odontologico +'\')'" class="btn btn-success"  data-toggle="tooltip" data-loading-text="carregando .." title="Seleciona um Segurado">
+					 			<i class="glyphicon glyphicon-user" aria-hidden="true"></i>
+					 		</a>
+					 	</span>
+					</div>
+					<p class="help-block " ><ins>Encontre o segurado para vincular ao seguro.</ins></p>
+				</div>				
+			</div>
+			</div>
+			
+			<br/>
 			<h5 class="text-info">INFORMAÇÕES SEGURO DE ODONTOLOGICO</h5>
 			<br/>
+			
 			<div class="row">
 				
 				<div class="col-md-4">
@@ -54,5 +73,8 @@
 		</div>
 	</div>
 	<div th:replace="footer"></div>
+	
+	
+	
 </body>
 </html>
