--- a/src/main/resources/templates/item/cadastro-seguroRastreador.html
+++ b/src/main/resources/templates/item/cadastro-seguroRastreador.html
@@ -18,7 +18,24 @@
 		<br/>
 		
 		<form action="#" th:action="@{/item/gravar-seguroRastreador}" th:object="${itemSeguroRastreador}" method="post">
+			<div class="row">
+			<div class="col-md-5">
+				<div class="form-group">
+
+					 <div class="input-group">
+					 	<input class="form-control typeahead" name="query" id="query" placeholder="Digite um nome ou cpf" type="text" />
+					 	<span class="input-group-btn">
+					 		<a href="#" th:href="'javascript:selecionarSegurado(\''+ rastreador +'\')'" class="btn btn-success"  data-toggle="tooltip" data-loading-text="carregando .." title="Seleciona um Segurado">
+					 			<i class="glyphicon glyphicon-user" aria-hidden="true"></i>
+					 		</a>
+					 	</span>
+					</div>
+					<p class="help-block " ><ins>Encontre o segurado para vincular ao seguro.</ins></p>
+				</div>				
+			</div>
+			</div>
 		
+			<br/>
 			<div th:replace="comum/automovel"></div>
 			<br/>
 			<br/>
@@ -35,5 +52,7 @@
 		</div>
 	</div>
 	<div th:replace="footer"></div>
+	
+	
 </body>
 </html>
