Inclusão de campos
-telefone comercial
-telefone celular
-estado

--- a/src/main/resources/templates/comum/endereco.html
+++ b/src/main/resources/templates/comum/endereco.html
@@ -41,6 +41,13 @@
 					<input type="text" th:field="*{endereco.cep}" class="form-control cep" />
 				</div>
 			</div>
+			<div class="col-md-4">
+				<div class="form-group">
+					<label for="" class="control-label">Estado</label>
+					<input type="text" th:field="*{endereco.estado}" class="form-control" maxlength="2"/>
+				</div>
+				
+			</div>
 			
 		</div>
 		
