--- a/src/main/resources/templates/segurado/cadastro-segurado.html
+++ b/src/main/resources/templates/segurado/cadastro-segurado.html
@@ -51,13 +51,13 @@
 				
 				<div class="form-group">
 					<label for="" class="control-label">E-mail</label>
-					 <input type="text" th:field="*{email}" class="form-control" />
+					 <input type="email" th:field="*{email}" class="form-control" />
 					 <p th:if="${#fields.hasErrors('email')}" class="label label-primary" th:errors="*{email}" ></p>
 				</div>
 				
 				<div class="form-group">
 					<label for="" class="control-label">Telefone</label>
-					<input type="text" th:field="*{telefone}" class="form-control telefone" />
+					<input type="text" th:field="*{telefone}" class="form-control telefone"  th:required="required" />
 					<p th:if="${#fields.hasErrors('telefone')}" class="label label-primary" th:errors="*{telefone}"></p>
 				</div>
 			</div>
@@ -69,7 +69,7 @@
 				
 				<div class="form-group">
 					<label for="" class="control-label">Data de Nascimento</label>
-					<input type="text" th:field="*{dataDeNascimento}" class="form-control  date" placeholder="Ex.: dd/mm/aaaa" maxlength="10"/>
+					<input type="date" th:field="*{dataDeNascimento}" class="form-control"  maxlength="10"  th:required="required"/>
 					<p th:if="${#fields.hasErrors('dataDeNascimento')}" class="label label-primary" th:errors="*{dataDeNascimento}">Incorrect LP</p>
 				</div>
 				
