--- a/src/main/resources/templates/segurado/cadastro-segurado.html
+++ b/src/main/resources/templates/segurado/cadastro-segurado.html
@@ -69,7 +69,7 @@
 				
 				<div class="form-group">
 					<label for="" class="control-label">Data de Nascimento</label>
-					<input type="date" th:field="*{dataDeNascimento}" class="form-control"  maxlength="10"  th:required="required"/>
+					<input type="text" th:field="*{dataDeNascimento}" class="form-control date"  maxlength="10"  th:required="required"/>
 					<p th:if="${#fields.hasErrors('dataDeNascimento')}" class="label label-primary" th:errors="*{dataDeNascimento}">Incorrect LP</p>
 				</div>
 				
