--- a/src/main/resources/templates/home/home.html
+++ b/src/main/resources/templates/home/home.html
@@ -28,7 +28,7 @@
 				  <div class="carousel-inner" role="listbox">
 				    <div class="item active">
 				      <div>
-				      	 <img src="../../../img/banner1.jpg" alt="..." style="height:580px;width:100%"/>
+				      	 <img th:src="@{../../../img/banner1.jpg}" alt="..." style="height:580px;width:100%"/>
 					      <div class="carousel-caption">
 					        <h3>BEM-VINDO AO SISTEMA GERENCIADOR DE SEGUROS</h3>
 					        <p></p>
@@ -38,38 +38,38 @@
 				      </div>
 				    </div>
 				    <div class="item">
-				      <img src="../../../img/banner2.jpg" alt="..." style="height:580px;width:100%"/>
+				      <img th:src="@{../../../img/banner2.jpg}" alt="..." style="height:580px;width:100%"/>
 				      <div class="carousel-caption">
 				      </div>
 				    </div>
 				    <div class="item">
-				      <img src="../../../img/banner3.jpg" alt="..." style="height:580px;width:100%"/>
+				      <img th:src="@{../../../img/banner3.jpg}" alt="..." style="height:580px;width:100%"/>
 				      <div class="carousel-caption">
 				      </div>
 				    </div>
 				    <div class="item">
-				      <img src="../../../img/banner4.jpg" alt="..." style="height:580px;width:100%"/>
+				      <img th:src="@{../../../img/banner4.jpg}" alt="..." style="height:580px;width:100%"/>
 				      <div class="carousel-caption">
 				      </div>
 				    </div>
 				    <div class="item">
-				      <img src="../../../img/banner5.jpg" alt="..." style="height:580px;width:100%"/>
+				      <img th:src="@{../../../img/banner5.jpg}" alt="..." style="height:580px;width:100%"/>
 				      <div class="carousel-caption">
 				      </div>
 				    </div>
 				    <div class="item">
-				      <img src="../../../img/banner6.jpg" alt="..." style="height:580px;width:100%"/>
+				      <img th:src="@{../../../img/banner6.jpg}" alt="..." style="height:580px;width:100%"/>
 				      <div class="carousel-caption">
 				      </div>
 				    </div>
 				  </div>
 				
 				  <!-- Controls -->
-				  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+				  <a class="left carousel-control" th:href="@{#carousel-example-generic}" role="button" data-slide="prev">
 				    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
 				    <span class="sr-only">Previous</span>
 				  </a>
-				  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+				  <a class="right carousel-control" th:href="@{#carousel-example-generic}" role="button" data-slide="next">
 				    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
 				    <span class="sr-only">Next</span>
 				  </a>
