--- a/src/main/resources/static/css/estilo.css
+++ b/src/main/resources/static/css/estilo.css
@@ -52,3 +52,5 @@ footer{
 .navbar-default .navbar-nav>li>a:focus, .navbar-default .navbar-nav>li>a:hover {
 	color:  #5F6789
 }
+
+input {text-transform: uppercase;}
