--- a/src/main/resources/templates/comum/automovel.html
+++ b/src/main/resources/templates/comum/automovel.html
@@ -7,7 +7,7 @@
 				<div class="col-md-4">
 					<div class="form-group">
 						<label for="" class="control-label">Modelo</label>
-						<input type="text" th:field="*{automovel.modelo}" class="form-control" />
+						<input type="text" th:field="*{automovel.modelo}" class="form-control" >
 					</div>
 					<div class="form-group">
 						<label for="" class="control-label">Chassi</label>
